# agentclub

./: .gitignore  CLA.md  README.md  app.py  auth.py  config.py  models.py  prd.md  pyproject.toml  requirements.txt  routes.py  socket_events.py
agent_adapter/nanobot-channel/: README.md  pyproject.toml
agent_adapter/nanobot-channel/nanobot_channel_agent_club/: channel.py
agent_adapter/nanobot-channel/nanobot_channel_agentclub/: __init__.py  channel.py
agent_adapter/nanobot-channel/tests/: test_channel.py
agent_adapter/openclaw-channel/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  reinstall.sh  setup-entry.ts  tsconfig.json
agent_adapter/openclaw-channel/src/: channel.ts  client.ts  gateway.ts  monitor.ts  openclaw-shims.d.ts  outbound.ts  runtime.ts  session.ts  setup.ts  types.ts
agent_adapter/openclaw-channel/test/: channel.test.ts  gateway.test.ts  monitor.test.ts  session.test.ts  setup.test.ts
channels/hermes-channel/: README.md
channels/nanobot-channel/: README.md  pyproject.toml
channels/nanobot-channel/nanobot_channel_agentclub/: __init__.py  channel.py
channels/nanobot-channel/tests/: test_channel.py
channels/openclaw-channel/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  reinstall.sh
channels/openclaw-channel/src/: channel.ts  client.ts  mime.ts  monitor.ts  openclaw-shims.d.ts  runtime.ts  session.ts  setup.ts  types.ts
channels/openclaw-channel/test/: client.test.ts  gateway.test.ts  mime.test.ts  monitor.test.ts  setup.test.ts
docs/history/: nanobot-channel-retry-analysis.md  openclaw-channel-retry-analysis.md  prd.md
src/agentclub/: __init__.py  app.py  auth.py  config.py  logging_setup.py  models.py  routes.py  socket_events.py
src/agentclub/cli/: __init__.py  _common.py  admin.py  agent.py  config_cmd.py  onboard.py  serve.py  user.py
src/agentclub/static/css/: style.css
src/agentclub/static/js/: chat.js  ui-kit.js
src/agentclub/templates/: admin.html  chat.html  login.html
static/css/: style.css
static/js/: chat.js
templates/: admin.html  chat.html  login.html
tests/: smoke.py  smoke_test.py  test_app.py  test_cli.py
