[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentclub"
version = "0.1.4"
description = "A Slack-like chat server for humans and AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Dante Zhu" }]
keywords = ["chat", "agent", "llm", "socketio", "flask"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "flask>=2.3",
    "flask-socketio>=5.3",
    "simple-websocket>=1.0",
    "werkzeug>=2.3",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "requests>=2",
    "python-socketio[client]>=5",
]

[project.scripts]
agentclub = "agentclub.cli:main"

[project.urls]
Homepage = "https://github.com/dantezhu/agentclub"
Issues = "https://github.com/dantezhu/agentclub/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentclub = [
    "static/css/*.css",
    "static/js/*.js",
    "templates/*.html",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
