[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobot-channel-agentclub"
version = "0.1.3"
description = "Nanobot channel plugin that connects nanobot-ai agents to an Agent Club IM server."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Dante Zhu" }]
keywords = ["nanobot", "agent", "chat", "channel", "agentclub", "socketio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "nanobot-ai>=0.1.5",
    "python-socketio[asyncio_client]>=5.10",
    "aiohttp>=3.9",
    "loguru>=0.7",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.entry-points."nanobot.channels"]
agentclub = "nanobot_channel_agentclub:AgentClubChannel"

[project.urls]
Homepage = "https://github.com/dantezhu/agentclub"
Repository = "https://github.com/dantezhu/agentclub"
Issues = "https://github.com/dantezhu/agentclub/issues"
"Agent Club Server" = "https://pypi.org/project/agentclub/"

[tool.setuptools.packages.find]
include = ["nanobot_channel_agentclub*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
